# jrohan-16.github.io

./: .gitignore  Index.html  README.md  index.html  package-lock.json  package.json  pyproject.toml  script.js  styles.css  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build-and-deploy.yml  refresh-fry9c.yml  static.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
capital_engine/: __init__.py
docs/: index.html
docs/_app/: version.json
docs/_app/immutable/assets/: _layout.PFF33yVa.css
docs/_app/immutable/chunks/: Da-b3h1-.js  Dq_UmMGk.js  Qq6QO8EO.js  kwM6qagp.js
docs/_app/immutable/entry/: app.DpViou8o.js  start.BoKRZyUi.js
scripts/: export_pyodide.py  ffiec-pull-y9c.js  prepull-1q24-1q25.js  refresh-fry9c.cjs  refresh-fry9c.js
scripts/util/: quarters.js
src/: +layout.svelte  app.html
src/components/: BankSelector.svelte  DataTable.svelte  DeltaTable.svelte  EditableGrid.svelte  SummaryCard.svelte
src/lib/: api.ts  data.ts  engine.ts  format.ts  model.py  pyodide.d.ts  stores.ts  types.ts  undo.ts  validate.ts
src/lib/components/: DataTable.svelte  Nav.svelte  ScenarioGrid.svelte  index.ts
src/lib/model/: capital_engine.py
src/routes/: +layout.svelte  +page.svelte
src/routes/compare/: +page.svelte
src/routes/edit/: +page.svelte
src/routes/export/: +page.svelte
src/routes/input/: +page.svelte
src/test/: basic.test.ts
static/data/: .gitkeep  jpm.json  pnc.json
tests/: engine.test.ts  test_capital_engine.py
(+5 files in other folders)
