[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "capital_engine"
version = "0.1.0"
description = "Capital forecast engine prototype"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "numpy",
]

[tool.setuptools.packages.find]
where = ["."]

